mahesh is updated file

--- a/myapp/templates/myapp/df.html
+++ b/myapp/templates/myapp/df.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is Mahesh Cheerneni</h1>
+    <h1>This is Mahesh Cheerneni from hyderabad</h1>
 </body>
 </html>
